--- a/Smart Banners Demo.html
+++ b/Smart Banners Demo.html
@@ -1,3 +1,5 @@
+
+
     <!doctype html>
       <html lang="ko">
         <head>
@@ -8,11 +10,15 @@
           <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
           <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
             <script>
-!function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","banners",{banners: {key: "d6ec5334-19f0-44fe-9de7-894f053b84e4"}})
+!function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","banners",{banners: {key: "98c390b5-779b-44a2-b31e-3b6536444203"}})
 AF('banners', 'showBanner')
 </script>
-  
-         
+          <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+          <script type='text/javascript'>
+            //<![CDATA[
+            Kakao.init('0602ffb305d81fee26ad53edcc4d5b9b');
+            //]]>
+          </script>
         </head>
         <body>
           <div id="root"></div>
