--- a/Smart Banners Demo.html
+++ b/Smart Banners Demo.html
@@ -3,6 +3,10 @@
     <!doctype html>
       <html lang="ko">
         <head>
+            <script>
+                !function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","banners",{banners: {key: "98c390b5-779b-44a2-b31e-3b6536444203"}})
+                AF('banners', 'showBanner')
+            </script>
           <meta charset="utf-8">
           <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, user-scalable=0, width=device-width">
           <title>잼페이스</title>
