--- a/pba.html
+++ b/pba.html
@@ -2,6 +2,7 @@
 <head>
     <!-- Assume that data about products in the shopping cart
     is stored in localStorage -->
+    <meta charset="utf-8"
     <script>
         window.onload = function () {
             document.getElementById('checkout').addEventListener('click', function () {
