--- a/smart_script.html
+++ b/smart_script.html
@@ -50,9 +50,9 @@
     document.getElementById('input_url').innerHTML = window.location.href;
 
     //Initializing Smart Script arguments
-    var oneLinkURL = "https://engmntqa.onelink.me/LtRd/";
-    var mediaSource = {keys: ["inmedia"]};
-    var campaign = {keys: ["incmp"]};
+    var oneLinkURL = "https://jiwoo.onelink.me/YH1H";
+    var mediaSource = {keys: ["inmedia", "utm_source"], defaultValue: "my_media_default_source"};
+    var campaign = {keys: ["incmp", "utm_campaign"]};
 
     //Calling the function after embedding the code will be through a global parameter on the window object called window.AF_SMART_SCRIPT
     //Onelink URL is generated
