--- a/pba.html
+++ b/pba.html
@@ -35,16 +35,16 @@
         <h1>Adaptive Web Page</h1>
     </header>
     <main>
-        <section class="login-section">
-            <h2>Login</h2>
-            <form id="login-form">
-                <label for="user-id">User ID:</label>
-                <input type="text" id="user-id" name="user-id" placeholder="Enter your user ID">
-                <button type="submit">Submit</button>
-            
-            </form>
-        </section>
-    </main>
+    <section class="login-section">
+        <h2>Login</h2>
+        <!-- Make sure this form element has the ID "login-form" -->
+        <form id="login-form">
+            <label for="user-id">User ID:</label>
+            <input type="text" id="user-id" name="user-id" placeholder="Enter your user ID">
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+</main>
     <footer>
         <p>&copy; 2023 Adaptive Web Page. All rights reserved.</p>
     </footer>
